[package]
name = "vmp4-dump"
version = "1.0.2"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
license = "MIT"
description = "Dumps Apple VMP4 files, used by geod, GeoServices, Maps, and other Apple apps."
readme = "readme.md"
edition = "2021"

[[bin]]
bench = false
path = "src/main.rs"
name = "vmp4-dump"

[dependencies]
byteorder = "1.4.3"
clap = "3.1.6"
flate2 = "1.0.22"
hxdmp = "0.2.1"

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
