[package]
name = "vmp4-dump"
version = "1.1.0"
authors = ["Kenan Sulayman <kenan@sig.dev>"]
license = "MIT"
repository = "https://github.com/19h/vmp4-dump"
description = "Dumps Apple VMP4 files, used by geod, GeoServices, Maps, and other Apple apps."
readme = "readme.md"
edition = "2021"

[features]
default = []
sqlite = ["dep:rusqlite"]

[[bin]]
bench = false
path = "src/main.rs"
name = "vmp4-dump"

[dependencies]
byteorder = "^1.5"
clap = "^4"
flate2 = "^1.0"
hxdmp = "^0.2"
prost = "^0.13"
rusqlite = { version = "^0.32", optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[build-dependencies]
prost-build = "^0.13"

[profile]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
